5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1800_2568.log
== TEST (2019-06-11 10:49:52) 
-- CODE:
from numpy import*
a= int(input("qual seu numero de asteriscos?"))
k=a
for i in range(v):
	print("*"*2*a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:49:57) 
-- CODE:
from numpy import*
a= int(input("qual seu numero de asteriscos?"))
k=a
for i in range(v):
	print("*"*2*a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:50:00) 
-- CODE:
from numpy import*
a= int(input("qual seu numero de asteriscos?"))
k=a
for i in range(a):
	print("*"*2*a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:00:20) 
-- CODE:
from numpy import*
a= int(input("qual seu numero de asteriscos?"))

for i in range(a)
	print((a-i)*"*" + i*"o")*2
	
	
-- ERROR:
File "XXXX", line 4
    for i in range(a)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:00:43) 
-- CODE:
from numpy import*
a= int(input("qual seu numero de asteriscos?"))

for i in range(a)
	print((a-i)*"*" + i*"o")*2
	a= a+1
	
	
-- ERROR:
File "XXXX", line 4
    for i in range(a)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:00:47) 
-- CODE:
from numpy import*
a= int(input("qual seu numero de asteriscos?"))

for i in range(a):
	print((a-i)*"*" + i*"o")*2
	a= a+1
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:01:23) 
-- CODE:
from numpy import*
a= int(input("qual seu numero de asteriscos?"))

for i in range(a):
	print((a-i)*"*" + 2*i*"o")*2
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:01:39) 
-- CODE:
from numpy import*
a= int(input("qual seu numero de asteriscos?"))

for i in range(a):
	print((a-i)*'*' + 2*i*'o')*2
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:02:19) 
-- CODE:
from numpy import*
a= int(input("qual seu numero de asteriscos?"))

for i in range(a):
	print((a-i)*'*' + 2*i*'o'+(x-i)*'i')
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:02:27) 
-- CODE:
from numpy import*
a= int(input("qual seu numero de asteriscos?"))

for i in range(a):
	print((a-i)*'*' + 2*i*'o'+(a-i)*'i')
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:02:46) 
-- CODE:
from numpy import*
x= int(input("qual seu numero de asteriscos?"))

for i in range(x):
	print((x-i)*'*' + 2*i*'o'+(a-i)*'i')
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:02:53) 
-- CODE:
from numpy import*
x= int(input("qual seu numero de asteriscos?"))

for i in range(x):
	print((x-i)*'*' + 2*i*'o'+(x-i)*'i')
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:03:01) 
-- CODE:
from numpy import*
x= int(input("qual seu numero de asteriscos?"))

for i in range(x):
	print((x-i)*'*' + 2*i*'o'+(x-i)*'i')
	
	
	
-- EXECUTION TIME:
1.01915
-- TEST CASE 1:
---- input:
11
---- correct output:
**********************
**********oo**********
*********oooo*********
********oooooo********
*******oooooooo*******
******oooooooooo******
*****oooooooooooo*****
****oooooooooooooo****
***oooooooooooooooo***
**oooooooooooooooooo**
*oooooooooooooooooooo*
---- user output:
***********iiiiiiiiiii
**********ooiiiiiiiiii
*********ooooiiiiiiiii
********ooooooiiiiiiii
*******ooooooooiiiiiii
******ooooooooooiiiiii
*****ooooooooooooiiiii
****ooooooooooooooiiii
***ooooooooooooooooiii
**ooooooooooooooooooii
*ooooooooooooooooooooi
-- TEST CASE 2:
---- input:
19
---- correct output:
**************************************
******************oo******************
*****************oooo*****************
****************oooooo****************
***************oooooooo***************
**************oooooooooo**************
*************oooooooooooo*************
************oooooooooooooo************
***********oooooooooooooooo***********
**********oooooooooooooooooo**********
*********oooooooooooooooooooo*********
********oooooooooooooooooooooo********
*******oooooooooooooooooooooooo*******
******oooooooooooooooooooooooooo******
*****oooooooooooooooooooooooooooo*****
****oooooooooooooooooooooooooooooo****
***oooooooooooooooooooooooooooooooo***
**oooooooooooooooooooooooooooooooooo**
*oooooooooooooooooooooooooooooooooooo*
---- user output:
*******************iiiiiiiiiiiiiiiiiii
******************ooiiiiiiiiiiiiiiiiii
*****************ooooiiiiiiiiiiiiiiiii
****************ooooooiiiiiiiiiiiiiiii
***************ooooooooiiiiiiiiiiiiiii
**************ooooooooooiiiiiiiiiiiiii
*************ooooooooooooiiiiiiiiiiiii
************ooooooooooooooiiiiiiiiiiii
***********ooooooooooooooooiiiiiiiiiii
**********ooooooooooooooooooiiiiiiiiii
*********ooooooooooooooooooooiiiiiiiii
********ooooooooooooooooooooooiiiiiiii
*******ooooooooooooooooooooooooiiiiiii
******ooooooooooooooooooooooooooiiiiii
*****ooooooooooooooooooooooooooooiiiii
****ooooooooooooooooooooooooooooooiiii
***ooooooooooooooooooooooooooooooooiii
**ooooooooooooooooooooooooooooooooooii
*ooooooooooooooooooooooooooooooooooooi
-- TEST CASE 3:
---- input:
26
---- correct output:
****************************************************
*************************oo*************************
************************oooo************************
***********************oooooo***********************
**********************oooooooo**********************
*********************oooooooooo*********************
********************oooooooooooo********************
*******************oooooooooooooo*******************
******************oooooooooooooooo******************
*****************oooooooooooooooooo*****************
****************oooooooooooooooooooo****************
***************oooooooooooooooooooooo***************
**************oooooooooooooooooooooooo**************
*************oooooooooooooooooooooooooo*************
************oooooooooooooooooooooooooooo************
***********oooooooooooooooooooooooooooooo***********
**********oooooooooooooooooooooooooooooooo**********
*********oooooooooooooooooooooooooooooooooo*********
********oooooooooooooooooooooooooooooooooooo********
*******oooooooooooooooooooooooooooooooooooooo*******
******oooooooooooooooooooooooooooooooooooooooo******
*****oooooooooooooooooooooooooooooooooooooooooo*****
****oooooooooooooooooooooooooooooooooooooooooooo****
***oooooooooooooooooooooooooooooooooooooooooooooo***
**oooooooooooooooooooooooooooooooooooooooooooooooo**
*oooooooooooooooooooooooooooooooooooooooooooooooooo*
---- user output:
**************************iiiiiiiiiiiiiiiiiiiiiiiiii
*************************ooiiiiiiiiiiiiiiiiiiiiiiiii
************************ooooiiiiiiiiiiiiiiiiiiiiiiii
***********************ooooooiiiiiiiiiiiiiiiiiiiiiii
**********************ooooooooiiiiiiiiiiiiiiiiiiiiii
*********************ooooooooooiiiiiiiiiiiiiiiiiiiii
********************ooooooooooooiiiiiiiiiiiiiiiiiiii
*******************ooooooooooooooiiiiiiiiiiiiiiiiiii
******************ooooooooooooooooiiiiiiiiiiiiiiiiii
*****************ooooooooooooooooooiiiiiiiiiiiiiiiii
****************ooooooooooooooooooooiiiiiiiiiiiiiiii
***************ooooooooooooooooooooooiiiiiiiiiiiiiii
**************ooooooooooooooooooooooooiiiiiiiiiiiiii
*************ooooooooooooooooooooooooooiiiiiiiiiiiii
************ooooooooooooooooooooooooooooiiiiiiiiiiii
***********ooooooooooooooooooooooooooooooiiiiiiiiiii
**********ooooooooooooooooooooooooooooooooiiiiiiiiii
*********ooooooooooooooooooooooooooooooooooiiiiiiiii
********ooooooooooooooooooooooooooooooooooooii
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:03:32) 
-- CODE:
from numpy import*
x= int(input("qual seu numero de asteriscos?"))

for i in range(x):
	print((x-i)*'*' + 2*i*'o'+(x-i)*'*')
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:03:38) 
-- CODE:
from numpy import*
x= int(input("qual seu numero de asteriscos?"))

for i in range(x):
	print((x-i)*'*' + 2*i*'o'+(x-i)*'*')
	
	
	
-- EXECUTION TIME:
0.933354
-- TEST CASE 1:
---- input:
11
---- correct output:
**********************
**********oo**********
*********oooo*********
********oooooo********
*******oooooooo*******
******oooooooooo******
*****oooooooooooo*****
****oooooooooooooo****
***oooooooooooooooo***
**oooooooooooooooooo**
*oooooooooooooooooooo*
---- user output:
**********************
**********oo**********
*********oooo*********
********oooooo********
*******oooooooo*******
******oooooooooo******
*****oooooooooooo*****
****oooooooooooooo****
***oooooooooooooooo***
**oooooooooooooooooo**
*oooooooooooooooooooo*
-- TEST CASE 2:
---- input:
19
---- correct output:
**************************************
******************oo******************
*****************oooo*****************
****************oooooo****************
***************oooooooo***************
**************oooooooooo**************
*************oooooooooooo*************
************oooooooooooooo************
***********oooooooooooooooo***********
**********oooooooooooooooooo**********
*********oooooooooooooooooooo*********
********oooooooooooooooooooooo********
*******oooooooooooooooooooooooo*******
******oooooooooooooooooooooooooo******
*****oooooooooooooooooooooooooooo*****
****oooooooooooooooooooooooooooooo****
***oooooooooooooooooooooooooooooooo***
**oooooooooooooooooooooooooooooooooo**
*oooooooooooooooooooooooooooooooooooo*
---- user output:
**************************************
******************oo******************
*****************oooo*****************
****************oooooo****************
***************oooooooo***************
**************oooooooooo**************
*************oooooooooooo*************
************oooooooooooooo************
***********oooooooooooooooo***********
**********oooooooooooooooooo**********
*********oooooooooooooooooooo*********
********oooooooooooooooooooooo********
*******oooooooooooooooooooooooo*******
******oooooooooooooooooooooooooo******
*****oooooooooooooooooooooooooooo*****
****oooooooooooooooooooooooooooooo****
***oooooooooooooooooooooooooooooooo***
**oooooooooooooooooooooooooooooooooo**
*oooooooooooooooooooooooooooooooooooo*
-- TEST CASE 3:
---- input:
26
---- correct output:
****************************************************
*************************oo*************************
************************oooo************************
***********************oooooo***********************
**********************oooooooo**********************
*********************oooooooooo*********************
********************oooooooooooo********************
*******************oooooooooooooo*******************
******************oooooooooooooooo******************
*****************oooooooooooooooooo*****************
****************oooooooooooooooooooo****************
***************oooooooooooooooooooooo***************
**************oooooooooooooooooooooooo**************
*************oooooooooooooooooooooooooo*************
************oooooooooooooooooooooooooooo************
***********oooooooooooooooooooooooooooooo***********
**********oooooooooooooooooooooooooooooooo**********
*********oooooooooooooooooooooooooooooooooo*********
********oooooooooooooooooooooooooooooooooooo********
*******oooooooooooooooooooooooooooooooooooooo*******
******oooooooooooooooooooooooooooooooooooooooo******
*****oooooooooooooooooooooooooooooooooooooooooo*****
****oooooooooooooooooooooooooooooooooooooooooooo****
***oooooooooooooooooooooooooooooooooooooooooooooo***
**oooooooooooooooooooooooooooooooooooooooooooooooo**
*oooooooooooooooooooooooooooooooooooooooooooooooooo*
---- user output:
****************************************************
*************************oo*************************
************************oooo************************
***********************oooooo***********************
**********************oooooooo**********************
*********************oooooooooo*********************
********************oooooooooooo********************
*******************oooooooooooooo*******************
******************oooooooooooooooo******************
*****************oooooooooooooooooo*****************
****************oooooooooooooooooooo****************
***************oooooooooooooooooooooo***************
**************oooooooooooooooooooooooo**************
*************oooooooooooooooooooooooooo*************
************oooooooooooooooooooooooooooo************
***********oooooooooooooooooooooooooooooo***********
**********oooooooooooooooooooooooooooooooo**********
*********oooooooooooooooooooooooooooooooooo*********
********oooooooooooooooooooooooooooooooooooo**
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
